--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "thing-it-device-arduino",
-  "version": "0.0.9",
-  "description": "[thing-it-node] Device Plugin for Arduino.",
+  "name": "thing-it-device-microcontroller",
+  "version": "0.0.1",
+  "description": "[thing-it-node] Device Plugin for Microcontroller like Arduino.",
   "authors": "Marc Gille",
   "license": "MIT, EPL",
   "keywords": [
@@ -12,7 +12,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/marcgille/thing-it-device-arduino"
+    "url": "https://github.com/marcgille/thing-it-device-microcontroller"
   },
   "dependencies": {
     "johnny-five": "^0.8.85"
